# fast_mail_parser

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  Makefile  Readme.md  deny.toml  pyproject.toml  requirements-dev.txt  ruff.toml  setup.py  taplo.toml
.github/: dependabot.yml
.github/scripts/: check_benchmark.py
.github/workflows/: build-publish.yml  publish.yml  test.yml
fast_mail_parser/: __init__.py  __init__.pyi
nc_mail_parser/: __init__.py
src/: fast_mail_parser.rs  lib.rs  mail_parser.rs  nc_mail_parser.rs
src/fast_mail_parser/: __init__.py  _core.pyi
tests/: conftest.py  generate_rfc_corpus.py  test_attachments.py  test_contents.py  test_contract.py  test_correctness.py  test_decode_errors.py  test_dos_limits.py  test_empty_fields.py  test_fast_mail_parser.py  test_headers.py  test_multivalue_headers.py  test_nc_mail_parser.py  test_rfc_corpus.py
tests/benchmark/: test_read_message.py
tests/data/: invalid_message.eml  large_message.eml  valid_message.eml
tests/data/rfc/: base64_body.eml  empty_body.eml  folded_header.eml  multipart_alternative.eml  multipart_mixed_attachment.eml  multipart_related.eml  nested_multipart.eml  quoted_printable_body.eml  rfc2047_encoded_subject.eml  rfc2231_param_filename.eml  rfc5322_plain.eml  rfc6532_utf8_headers.eml  utf8_8bit_body.eml
