[package]
  authors      = [ "Andrii Sokyrko <wartwvister@gmail.com>" ]
  categories   = [ "email", "parsing" ]
  description  = "Very fast Python library for .eml files parsing."
  edition      = "2021"
  homepage     = "https://github.com/namecheap/fast_mail_parser"
  keywords     = [ "email", "maildir", "mime", "parser", "rfc822" ]
  license-file = "LICENSE"
  name         = "fast_mail_parser"
  publish      = false
  readme       = "Readme.md"
  repository   = "https://github.com/namecheap/fast_mail_parser"
  version      = "0.4.0"

[profile.dev]
  debug     = true
  opt-level = 0

[profile.release]
  codegen-units = 1
  debug         = false
  lto           = true
  opt-level     = 3
  strip         = "debuginfo"

[lib]
  crate-type = [ "cdylib" ]
  name       = "_core"

[dependencies]
  mailparse = "0.15.0"
  pyo3      = { features = [ "extension-module" ], version = "0.22.0" }

[features]
  default = [ "pyo3/extension-module" ]
