[package]
name = "fast_mail_parser"
description = "Very fast Python library for .eml files parsing."
edition = "2021"
rust-version = "1.83"
version = "0.4.0"
authors = ["Andrii Sokyrko <wartwvister@gmail.com>"]
readme = "Readme.md"
license-file = "LICENSE"
homepage = "https://github.com/namecheap/fast_mail_parser"
repository = "https://github.com/namecheap/fast_mail_parser"
keywords = ["parser", "email", "rfc822", "mime", "maildir"]
categories = ["email", "parsing"]
publish = false

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = true
codegen-units = 1

[lib]
name = "fast_mail_parser"
path = "src/fast_mail_parser.rs"
crate-type = ["cdylib"]

[dependencies]
# `charset` is also a transitive dependency of `mailparse`; we depend on it
# directly to reuse the exact charset-decoding step mailparse applies in
# `get_body`, so text parts are decoded only once (see `decode_charset`).
charset = "0.1.3"
mailparse = "0.16.1"
pyo3 = "0.29"

[features]
default = ["pyo3/extension-module"]
