[project.urls]
  Homepage   = "https://github.com/namecheap/fast_mail_parser"
  Issues     = "https://github.com/namecheap/fast_mail_parser/issues"
  Repository = "https://github.com/namecheap/fast_mail_parser.git"

[project]
  description     = "Very fast Python library for .eml files parsing."
  license         = { file = "LICENSE" }
  name            = "fast_mail_parser"
  readme          = "Readme.md"
  requires-python = ">= 3.9"
  version         = "0.4.0"

  keywords = [ "email", "maildir", "mime", "parser", "rfc822" ]

  authors = [ { email = "wartwvister@gmail.com", name = "Andrii Sokyrko" } ]

  classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries",
  ]

  dependencies = [  ]

[dependency-groups]
  test = [ "mail-parser>=4.1.4", "pytest-benchmark>=5.1.0", "pytest>=8.4.1" ]

[build-system]
  build-backend = "maturin"
  requires      = [ "maturin>=1.0,<2.0" ]

[tool.maturin]
  module-name     = "fast_mail_parser._core"
  python-packages = [ "fast_mail_parser" ]
  python-source   = "src"
  sdist-include   = [ "src/*" ]
