[project]
name = "fast_mail_parser"
dynamic = ["version"]
description = "Very fast Python library for .eml files parsing."
authors = [{ name = "Andrii Sokyrko", email = "wartwvister@gmail.com" }]
keywords = ["parser", "email", "rfc822", "mime", "maildir"]
requires-python = ">= 3.11"
readme = "Readme.md"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Topic :: Communications :: Email",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest~=7.4.4", "pytest-benchmark==4.0.0", "mail-parser==3.15.0"]

[project.urls]
Homepage = "https://github.com/namecheap/fast_mail_parser"
Repository = "https://github.com/namecheap/fast_mail_parser.git"
Issues = "https://github.com/namecheap/fast_mail_parser/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
sdist-include = ["src/*"]
